Finalize the backend